src/assets/main.css
/* ... */
.ts28b {
  font-family: "Poppins-Bold";
  font-size: 2.8rem;
}

.ts24b {
  font-family: "Poppins-Bold";
  font-size: 2.4rem;
}

.ts24r {
  font-family: "Poppins-Regular";
  font-size: 2.4rem;
}

.ts18b {
  font-family: "Poppins-Bold";
  font-size: 1.8rem;
}

.ts18r {
  font-family: "Poppins-Regular";
  font-size: 1.8rem;
}

.ts14b {
  font-family: "Poppins-Bold";
  font-size: 1.4rem;
}

.ts14r {
  font-family: "Poppins-Regular";
  font-size: 1.4rem;
}

.ts12r {
  font-family: "Poppins-Regular";
  font-size: 12px;
}

.ts-purple {
  color: var(--purple);
}

.ts-green {
  color: var(--green);
}

.ts-black {
  color: var(--black);
}

.ts-grey {
  color: var(--grey);
}

/* Icon sizes */

.icon-24 {
  height: 2.4rem;
  width: 2.4rem;
  min-height: 24px;
  min-width: 24px;
}

.icon-32 {
  height: 3.2rem;
  width: 3.2rem;
  min-height: 24px;
  min-width: 24px;
}

.icon-64 {
  height: 6.4rem;
  width: 6.4rem;
  min-height: 24px;
  min-width: 24px;
}

.icon-black {
  fill: var(--black);
}

.icon-purple {
  fill: var(--purple);
}

/* Previous configuration */

html {
  font-size: 10px;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

li {
  text-decoration: none;
  list-style-type: none;
}

ul {
  text-decoration: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

body {
  padding: 0;
  margin: 0;
}

main {
  padding: 6.4rem 10%;
  align-items: center;
  text-align: center;
}

.store-index {
  padding: 0;
  align-items: center;
  text-align: center;
}

.g-3,
.gy-3 {
  --bs-gutter-y: 0;
}

.g-3,
.gx-3 {
  --bs-gutter-x: 0.5rem;
}

.row {
  margin: 0;
  justify-content: flex-start;
}
/* Navbar Large Screens*/

/* Primary menu */

#nav-main-lg .primary-menu {
  background-color: var(--green);
  color: var(--black);
  padding: 1.6rem 6.4rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
}

#nav-main-lg #search-bar {
  padding: 0 3.2rem;
}

#search-bar input {
  width: 100%;
  margin-right: 0.8rem;
  min-width: 23.2rem;
}

.customer-options {
  display: flex;
  align-items: center;
}

.customer-options-items {
  padding: 0 0 0 1.6rem;
}

.customer-options-items:first-child {
  padding: 0;
}

.customer-options-items a {
  color: var(--black);
  text-decoration: none;
}

.login-options {
  display: flex;
  align-items: center;
}

.login-options-text {
  width: max-content;
  display: flex;
  flex-direction: column;
  text-align: left;
  padding: 0 0 0 2rem;
}

/* Secondary menu */

#nav-main-lg .secondary-menu {
  background-color: var(--purple);
  align-items: center;
  padding: 1.6rem 6.4rem;
  display: flex;
}

#nav-main-lg .secondary-menu ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

#nav-main-lg .secondary-menu a {
  text-decoration: none;
  color: var(--black);
  display: flex;
  justify-content: space-between;
}

#nav-main-lg .secondary-menu a:hover {
  color: var(--white);
}

#nav-main-lg .pet-type-items {
  display: flex;
  justify-content: space-between;
}

#nav-main-lg .pet-type-items a {
  padding: 0 4rem 0 0;
}

/* My Data Secondary Menu */

.my-data-options {
  display: flex;
  flex-direction: row;
  gap: 4rem;
  align-content: space-around;
}

.my-data {
  justify-content: space-evenly;
}

/* Navbar Medium Screens */

#nav-main-md {
  padding: 1.6rem 3.2rem;
  display: none;
  background-color: var(--green);
  flex-direction: column;
  width: 100%;
}

#nav-main-md .navbar {
  display: flex;
  justify-content: space-between;
  flex-wrap: nowrap;
}

#nav-main-md .navbar:first-child {
  padding-bottom: 1.6rem;
}

#nav-main-md .form-inline {
  padding: 0;
}

/*My Pet*/

.my-pet-container {
  display: flex;
  flex-direction: row;
}

.pet-image {
  width: 25rem;
}

.pet-image-col {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  margin-top: 4rem;
}

/* Form */

.form-black {
  height: 4rem;
  min-height: 40px;
  background-color: var(--black);
  color: var(--green);
  border: none;
  border-radius: 12px;
  padding-left: 3.2rem;
}

.form-data {
  width: 100%;
}

.form-black::placeholder {
  color: var(--green);
}

.form-grey {
  height: 4rem;
  min-height: 40px;
  background-color: var(--grey);
  color: var(--black);
  border: none;
  border-radius: 12px;
  padding-left: 3.2rem;
}

.form-grey::placeholder {
  color: var(--purple);
}

.input-textarea {
  height: 10rem;
}

/* Button */

.btn {
  border: none;
  border-radius: 12px;
  min-height: 40px;
}

.btn-icon {
  height: 4rem;
  width: 4rem;
  min-height: 40px;
  min-width: 40px;
  padding: 0;
}

.btn-grey {
  background-color: var(--grey);
  color: var(--black);
}

.btn-grey:hover {
  background-color: var(--purple);
}

.btn-green {
  background-color: var(--green);
  color: var(--white);
}

.btn-green:hover {
  background-color: var(--green);
}

.btn-purple {
  background-color: var(--purple);
  color: var(--white);
}

.btn-purple:hover {
  background-color: var(--green);
}

.btn-48 {
  min-height: 4.8rem;
  padding: 0 4rem;
}

.link-green {
  color: var(--green);
}

.link-green:hover {
  color: var(--green);
  font-style: italic;
}

.btn-buy {
  box-sizing: border-box;
  width: 100%;
}

.store-index section {
  margin-bottom: 4rem;
}

.store-index .section-header {
  margin-bottom: 2rem;
}

.store-index h1 {
  padding: 0 5%;
}

.owl-carousel .owl-stage {
  display: flex;
  align-items: center;
}

.owl-carousel .item img {
  max-height: 16rem;
  max-width: 24.8rem;
}

#pet-favorite h1 {
  margin-bottom: 1rem;
}

#pet-favorite p {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

#pet-favorite nav {
  display: flex;
  align-items: center;
  padding: 0 20%;
  justify-content: center;
}

#pet-favorite li {
  display: flex;
  padding: 0 10%;
  justify-content: space-around;
  align-items: center;
}

#pet-favorite a {
  text-decoration: none;
  color: var(--black);
  padding: 0 1rem;
  text-align: center;
}

#pet-favorite a:hover {
  color: var(--purple);
}
/* ... */

